--- a/index.html
+++ b/index.html
@@ -32,6 +32,39 @@
     <script src="src/main.js" defer></script>
 </head>
 <body>
-    
+    <!-- Header -->
+    <head>
+        <div>
+            <img src="images/faviconcircle.ico" alt="logo">
+            <h1><a href="#">GiGi</a></h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#testmonials">Tesmimonials</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </head>
+    <!-- Main -->
+    <main>
+        <!-- Home -->
+        <section id="home"></section>
+        <!-- About -->
+        <section id="about"></section>
+        <!-- Skills -->
+        <section id="skills"></section>
+        <!-- Work -->
+        <section id="work"></section>
+        <!-- Testimonials -->
+        <section id="testimonials"></section>
+        <!-- Arrow Up -->
+        <aside></aside>
+    </main>
+    <!-- Footer -->
+    <footer id="contact"></footer>
 </body>
 </html>
