--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
     <!-- Main -->
     <main>
         <!-- Home -->
-        <section id="home"></section>
+        <section id="home">
+            <img src="images/faviconnobackground.ico" alt="Gigi's profile">
+            <h2>Hello I&#39;m a Design Enthusiast and Technology Lover&#44; GiGi</h2>
+            <p> I&#39;m a recent graduate skilled in design&#44; interaction design&#44; and programming&#46; I&#39;m passionate about combining creativity with technical know&#45;how&#44; and I&#39;m excited to start my journey as a Front&#45;End Developer or Web Developer&#46; Let&#39;s create something amazing together&#33; 🚀</p>
+        </section>
         <!-- About -->
         <section id="about"></section>
         <!-- Skills -->
