--- a/index.html
+++ b/index.html
@@ -61,7 +61,40 @@
                 Let&#39;s create something amazing together&#33; 🚀</p>
         </section>
         <!-- About -->
-        <section id="about"></section>
+        <section id="about">
+            <h2>About me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt reprehenderit dolor maiores neque provident maxime, illum sint, accusamus nesciunt dicta! Ipsam perspiciatis omnis iure sapiente ratione. Autem, nostrum provident.</p>
+            <ul>
+                <li>
+                    <i class="fa-solid fa-wand-magic-sparkles"></i>
+                    <p>Design Bachelor' degree</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-people-arrows"></i>
+                    <p>Interaction Design</p>
+                </li>
+                <li>
+                    <i class="fa-brands fa-html5"></i>
+                    <p>Tech Lover - programming</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <img src="images/jobs/google.png" alt="google logo">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/jobs/samsung.png" alt="samsung logo">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
         <!-- Skills -->
         <section id="skills"></section>
         <!-- Work -->
