--- a/index.html
+++ b/index.html
@@ -96,7 +96,60 @@
             </ul>
         </section>
         <!-- Skills -->
-        <section id="skills"></section>
+        <section id="skills">
+            <h2>My Skills</h2>
+            <p>Skills and Attributes</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque atque expedita eveniet impedit provident architecto nemo minima quidem labore assumenda?</p>
+            <div>
+                <section>
+                    <h3>Coding Skills</h3>
+                    <ul>
+                        <li>
+                            <div><span>HTML</span><span>98%</span><div>
+                            </div><div style="width: 98%"></div></div>
+                        </li>
+                        <li>
+                            <div><span>CSS</span><span>90%</span><div>
+                            </div><div style="width: 90%"></div></div>
+                        </li>
+                        <li>
+                            <div><span>JavaScript</span><span>80%</span><div>
+                            </div><div style="width: 80%"></div></div>
+                        </li>
+                        <li>
+                            <div><span>TypeScript</span><span>63%</span><div>
+                            </div><div style="width: 63%"></div></div>
+                        </li>
+                        <li>
+                            <div><span>React</span><span>55%</span><div>
+                            </div><div style="width: 55%"></div></div>
+                        </li>
+                        <li>
+                            <div><span>NodeJS</span><span>47%</span><div>
+                            </div><div style="width: 47%"></div></div>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Tools</h3>
+                    <ul>
+                        <li>Visual Studio Code</li>
+                        <li>Visual Studio Code</li>
+                        <li>Visual Studio Code</li>
+                        <li>Visual Studio Code</li>
+                        <li>Visual Studio Code</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Etc</h3>
+                    <ul>
+                        <li>Git</li>
+                        <li>Git</li>
+                        <li>Git</li>
+                    </ul>
+                </section>
+            </div>
+        </section>
         <!-- Work -->
         <section id="work"></section>
         <!-- Testimonials -->
