--- a/index.html
+++ b/index.html
@@ -151,7 +151,73 @@
             </div>
         </section>
         <!-- Work -->
-        <section id="work"></section>
+        <section id="work">
+            <h2>My work</h2>
+            <p>Coding works with HTML, CSS and JavaScript</p>
+            <ul>
+                <li><button>All <span>8</span></button></li>
+                <li><button>Front End <span>3</span></button></li>
+                <li><button>Mobile <span>3</span></button></li>
+                <li><button>Animation <span>2</span></button></li>
+            </ul>
+            <ul>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project1.webp" alt="project1">
+                    <div>
+                        <h3>project1</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project2.webp" alt="project2">
+                    <div>
+                        <h3>project2</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project3.webp" alt="project3">
+                    <div>
+                        <h3>project3</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project4.webp" alt="project4">
+                    <div>
+                        <h3>project4</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project5.webp" alt="project5">
+                    <div>
+                        <h3>project5</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project6.webp" alt="project6">
+                    <div>
+                        <h3>project6</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project7.webp" alt="project7">
+                    <div>
+                        <h3>project7</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank"></a>
+                    <img src="images/projects/project8.webp" alt="project8">
+                    <div>
+                        <h3>project8</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div></li>
+            </ul>
+        </section>
         <!-- Testimonials -->
         <section id="testimonials"></section>
         <!-- Arrow Up -->
