--- a/index.html
+++ b/index.html
@@ -219,7 +219,33 @@
             </ul>
         </section>
         <!-- Testimonials -->
-        <section id="testimonials"></section>
+        <section id="testimonials">
+            <h2>Testmonoials</h2>
+            <p>See what they say about me</p>
+            <ul>
+                <li>
+                    <img src="images/testimonials/people1.webp" alt="people1">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam nisi accusantium ipsum facere vero nulla vitae facilis, dicta eligendi dolorem commodi veniam ab reiciendis nostrum modi animi autem ipsa?</p>
+                        <p><a href="#">Hana Jo</a> /Project partner</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/testimonials/people2.webp" alt="people2">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam nisi accusantium ipsum facere vero nulla vitae facilis, dicta eligendi dolorem commodi veniam ab reiciendis nostrum modi animi autem ipsa?</p>
+                        <p><a href="#">Hana Jo</a> /Project partner</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/testimonials/people3.webp" alt="people3">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam nisi accusantium ipsum facere vero nulla vitae facilis, dicta eligendi dolorem commodi veniam ab reiciendis nostrum modi animi autem ipsa?</p>
+                        <p><a href="#">Hana Jo</a> /Project partner</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
         <!-- Arrow Up -->
         <aside></aside>
     </main>
