--- a/index.html
+++ b/index.html
@@ -247,9 +247,29 @@
             </ul>
         </section>
         <!-- Arrow Up -->
-        <aside></aside>
+        <aside>
+            <a href="#home" title="back to top">
+                <i class="fa-solid fa-arrow-up"></i>
+            </a>
+        </aside>
     </main>
     <!-- Footer -->
-    <footer id="contact"></footer>
+    <footer id="contact">
+        <h2>Let&#39;s talk!</h2>
+        <p>Jiwon.Ha@student.uts.edu.au</p>
+        <ul>
+            <li>
+                <a href="#" title="my gitub link">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#" title="my linkdin link">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+            </li>
+        </ul>
+        <p>©️GiGi(Jiwon Ha) - All rights reserved</p>
+    </footer>
 </body>
 </html>
