--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
 </head>
 <body>
     <!-- Header -->
-    <head>
-        <div>
-            <img src="images/faviconcircle.ico" alt="logo">
-            <h1><a href="#">GiGi</a></h1>
+    <header class="header">
+        <div class="header__logo">
+            <img class="header__logo__img" src="images/faviconcircle.ico" alt="logo">
+            <h1><a class="header__logo__title" href="#">GiGi</a></h1>
         </div>
         <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#testmonials">Tesmimonials</a></li>
-                <li><a href="#contact">Contact</a></li>
+            <ul class="header__menu">
+                <li><a class="header__menu__item active" href="#home">Home</a></li>
+                <li><a class="header__menu__item" href="#about">About</a></li>
+                <li><a class="header__menu__item" href="#skills">Skills</a></li>
+                <li><a class="header__menu__item" href="#work">Work</a></li>
+                <li><a class="header__menu__item" href="#testmonials">Tesmimonials</a></li>
+                <li><a class="header__menu__item" href="#contact">Contact</a></li>
             </ul>
         </nav>
-    </head>
+    </header>
     <!-- Main -->
     <main>
         <!-- Home -->
