--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
     <main>
         <!-- Home -->
         <section id="home">
-            <img src="images/faviconnobackground.ico" alt="Gigi's profile">
-            <h2>Hello I&#39;m a Design Enthusiast and Technology Lover&#44; GiGi</h2>
-            <p> I&#39;m a recent graduate skilled in design&#44; interaction design&#44; and programming&#46;<br>
+            <img class="home__profile" src="images/faviconnobackground.ico" alt="Gigi's profile">
+            <h2 class="home__title">Hello! <br> I&#39;m a <strong class="home__title--strong">Design Enthusiast and Technology Lover</strong>&#44; GiGi</h2>
+            <p class="home__description"> I&#39;m a recent graduate skilled in design&#44; interaction design&#44; and programming&#46;<br>
                 I&#39;m passionate about combining creativity with technical know&#45;how&#44; <br>
                 and I&#39;m excited to start my journey as a Front&#45;End Developer or Web Developer&#46;<br>
-                Let&#39;s create something amazing together&#33; 🚀</p>
+                Let&#39;s create something amazing together&#33; 🚀
+            </p>
+            <a class="home__contact" href="#contact">Contact me</a>
         </section>
         <!-- About -->
         <section id="about">
