--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
             <a class="home__contact" href="#contact">Contact me</a>
         </section>
         <!-- About -->
-        <section id="about">
-            <h2>About me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt reprehenderit dolor maiores neque provident maxime, illum sint, accusamus nesciunt dicta! Ipsam perspiciatis omnis iure sapiente ratione. Autem, nostrum provident.</p>
+        <section id="about" class="section">
+            <h2 class="title">About me</h2>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt reprehenderit dolor maiores neque provident maxime, illum sint, accusamus nesciunt dicta! Ipsam perspiciatis omnis iure sapiente ratione. Autem, nostrum provident.</p>
             <ul>
                 <li>
                     <i class="fa-solid fa-wand-magic-sparkles"></i>
@@ -98,9 +98,9 @@
             </ul>
         </section>
         <!-- Skills -->
-        <section id="skills">
-            <h2>My Skills</h2>
-            <p>Skills and Attributes</p>
+        <section id="skills" class="section">
+            <h2 class="title">My Skills</h2>
+            <p class="description">Skills and Attributes</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque atque expedita eveniet impedit provident architecto nemo minima quidem labore assumenda?</p>
             <div>
                 <section>
@@ -153,9 +153,9 @@
             </div>
         </section>
         <!-- Work -->
-        <section id="work">
-            <h2>My work</h2>
-            <p>Coding works with HTML, CSS and JavaScript</p>
+        <section id="work" class="section">
+            <h2 class="title">My work</h2>
+            <p class="description">Coding works with HTML, CSS and JavaScript</p>
             <ul>
                 <li><button>All <span>8</span></button></li>
                 <li><button>Front End <span>3</span></button></li>
@@ -220,10 +220,10 @@
                     </div></li>
             </ul>
         </section>
-        <!-- Testimonials -->
-        <section id="testimonials">
-            <h2>Testmonoials</h2>
-            <p>See what they say about me</p>
+        <!-- Testimonials --> 
+        <section id="testimonials" class="section">
+            <h2 class="title">Testmonoials</h2>
+            <p class="description">See what they say about me</p>
             <ul>
                 <li>
                     <img src="images/testimonials/people1.webp" alt="people1">
@@ -256,9 +256,9 @@
         </aside>
     </main>
     <!-- Footer -->
-    <footer id="contact">
-        <h2>Let&#39;s talk!</h2>
-        <p>Jiwon.Ha@student.uts.edu.au</p>
+    <footer id="contact" class="section">
+        <h2 class="title">Let&#39;s talk!</h2>
+        <p class="description">Jiwon.Ha@student.uts.edu.au</p>
         <ul>
             <li>
                 <a href="#" title="my gitub link">
