--- a/index.html
+++ b/index.html
@@ -63,36 +63,39 @@
             <a class="home__contact" href="#contact">Contact me</a>
         </section>
         <!-- About -->
-        <section id="about" class="section">
+        <section id="about" class="section max-containter">
             <h2 class="title">About me</h2>
             <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt reprehenderit dolor maiores neque provident maxime, illum sint, accusamus nesciunt dicta! Ipsam perspiciatis omnis iure sapiente ratione. Autem, nostrum provident.</p>
-            <ul>
-                <li>
-                    <i class="fa-solid fa-wand-magic-sparkles"></i>
-                    <p>Design Bachelor' degree</p>
+            <ul class="majors">
+                <li class="major">
+                    <i class="fa-solid fa-wand-magic-sparkles major__icon" ></i>
+                    <p class="major__title">Design Bachelor' degree</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                 </li>
-                <li>
-                    <i class="fa-solid fa-people-arrows"></i>
-                    <p>Interaction Design</p>
+                <li class="major">
+                    <i class="fa-solid fa-people-arrows major__icon" ></i>
+                    <p class="major__title">Interaction Design</p>
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
                 </li>
-                <li>
-                    <i class="fa-brands fa-html5"></i>
-                    <p>Tech Lover - programming</p>
+                <li class="major">
+                    <i class="fa-brands fa-html5 major__icon" ></i>
+                    <p class="major__title">Tech Lover - programming</p>
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
                 </li>
             </ul>
-            <ul>
-                <li>
+            <ul class="jobs">
+                <li class="job">
                     <img src="images/jobs/google.png" alt="google logo">
                     <div>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <p>Lorem, ipsum dolor.</p>
+                        <p class="job__name">Google</p>
+                        <p class="job__period">Lorem, ipsum dolor.</p>
                     </div>
                 </li>
-                <li>
+                <li class="job">
                     <img src="images/jobs/samsung.png" alt="samsung logo">
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <p>Lorem ipsum dolor sit.</p>
+                        <p class="job__name">Samsumg</p>
+                        <p class="job__period">Lorem ipsum dolor sit.</p>
                     </div>
                 </li>
             </ul>
