--- a/index.html
+++ b/index.html
@@ -102,57 +102,59 @@
         </section>
         <!-- Skills -->
         <section id="skills" class="section">
-            <h2 class="title">My Skills</h2>
-            <p class="description">Skills and Attributes</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque atque expedita eveniet impedit provident architecto nemo minima quidem labore assumenda?</p>
-            <div>
-                <section>
-                    <h3>Coding Skills</h3>
-                    <ul>
-                        <li>
-                            <div><span>HTML</span><span>98%</span><div>
-                            </div><div style="width: 98%"></div></div>
-                        </li>
-                        <li>
-                            <div><span>CSS</span><span>90%</span><div>
-                            </div><div style="width: 90%"></div></div>
-                        </li>
-                        <li>
-                            <div><span>JavaScript</span><span>80%</span><div>
-                            </div><div style="width: 80%"></div></div>
-                        </li>
-                        <li>
-                            <div><span>TypeScript</span><span>63%</span><div>
-                            </div><div style="width: 63%"></div></div>
-                        </li>
-                        <li>
-                            <div><span>React</span><span>55%</span><div>
-                            </div><div style="width: 55%"></div></div>
-                        </li>
-                        <li>
-                            <div><span>NodeJS</span><span>47%</span><div>
-                            </div><div style="width: 47%"></div></div>
-                        </li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>Tools</h3>
-                    <ul>
-                        <li>Visual Studio Code</li>
-                        <li>Visual Studio Code</li>
-                        <li>Visual Studio Code</li>
-                        <li>Visual Studio Code</li>
-                        <li>Visual Studio Code</li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>Etc</h3>
-                    <ul>
-                        <li>Git</li>
-                        <li>Git</li>
-                        <li>Git</li>
-                    </ul>
-                </section>
+            <div class="max-containter">
+                <h2 class="title">My Skills</h2>
+                <p class="description">Skills and Attributes</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque atque expedita eveniet impedit provident architecto nemo minima quidem labore assumenda?</p>
+                <div class="skills">
+                    <section class="skills__coding">
+                        <h3 class="skills__title">Coding Skills</h3>
+                        <ul>
+                            <li>
+                                <div><span>HTML</span><span>98%</span><div>
+                                </div><div style="width: 98%"></div></div>
+                            </li>
+                            <li>
+                                <div><span>CSS</span><span>90%</span><div>
+                                </div><div style="width: 90%"></div></div>
+                            </li>
+                            <li>
+                                <div><span>JavaScript</span><span>80%</span><div>
+                                </div><div style="width: 80%"></div></div>
+                            </li>
+                            <li>
+                                <div><span>TypeScript</span><span>63%</span><div>
+                                </div><div style="width: 63%"></div></div>
+                            </li>
+                            <li>
+                                <div><span>React</span><span>55%</span><div>
+                                </div><div style="width: 55%"></div></div>
+                            </li>
+                            <li>
+                                <div><span>NodeJS</span><span>47%</span><div>
+                                </div><div style="width: 47%"></div></div>
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="skills__tools">
+                        <h3 class="skills__title">Tools</h3>
+                        <ul>
+                            <li>Visual Studio Code</li>
+                            <li>Visual Studio Code</li>
+                            <li>Visual Studio Code</li>
+                            <li>Visual Studio Code</li>
+                            <li>Visual Studio Code</li>
+                        </ul>
+                    </section>
+                    <section class="skills__etc">
+                        <h3 class="skills__title">Etc</h3>
+                        <ul>
+                            <li>Git</li>
+                            <li>Git</li>
+                            <li>Git</li>
+                        </ul>
+                    </section>
+                </div>
             </div>
         </section>
         <!-- Work -->
