--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a class="home__contact" href="#contact">Contact me</a>
         </section>
         <!-- About -->
-        <section id="about" class="section max-containter">
+        <section id="about" class="section max-container">
             <h2 class="title">About me</h2>
             <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt reprehenderit dolor maiores neque provident maxime, illum sint, accusamus nesciunt dicta! Ipsam perspiciatis omnis iure sapiente ratione. Autem, nostrum provident.</p>
             <ul class="majors">
@@ -102,7 +102,7 @@
         </section>
         <!-- Skills -->
         <section id="skills" class="section">
-            <div class="max-containter">
+            <div class="max-container">
                 <h2 class="title">My Skills</h2>
                 <p class="description">Skills and Attributes</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque atque expedita eveniet impedit provident architecto nemo minima quidem labore assumenda?</p>
@@ -188,71 +188,81 @@
         </section>
         <!-- Work -->
         <section id="work" class="section">
-            <h2 class="title">My work</h2>
-            <p class="description">Coding works with HTML, CSS and JavaScript</p>
-            <ul>
-                <li><button>All <span>8</span></button></li>
-                <li><button>Front End <span>3</span></button></li>
-                <li><button>Mobile <span>3</span></button></li>
-                <li><button>Animation <span>2</span></button></li>
-            </ul>
-            <ul>
-                <li><a href="#" target="_blank">
-                    <img src="images/projects/project1.webp" alt="project1">
-                    <div>
-                        <h3>project1</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                </a></li>
-                <li><a href="#" target="_blank">
-                    <img src="images/projects/project2.webp" alt="project2">
-                    <div>
-                        <h3>project2</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                </a></li>
-                <li><a href="#" target="_blank">
-                    <img src="images/projects/project3.webp" alt="project3">
-                    <div>
-                        <h3>project3</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                </a></li>
-                <li><a href="#" target="_blank">
-                    <img src="images/projects/project4.webp" alt="project4">
-                    <div>
-                        <h3>project4</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                </a></li>
-                <li><a href="#" target="_blank">
-                    <img src="images/projects/project5.webp" alt="project5">
-                    <div>
-                        <h3>project5</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                </a></li>
-                <li><a href="#" target="_blank">
-                    <img src="images/projects/project6.webp" alt="project6">
-                    <div>
-                        <h3>project6</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                </a></li>
-                <li><a href="#" target="_blank">
-                    <img src="images/projects/project7.webp" alt="project7">
-                    <div>
-                        <h3>project7</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                </a></li>
-                <li><a href="#" target="_blank"></a>
-                    <img src="images/projects/project8.webp" alt="project8">
-                    <div>
-                        <h3>project8</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                    </div></li>
-            </ul>
+            <div class="max-contatiner">
+                <h2 class="title">My work</h2>
+                <p class="description">Coding works with HTML, CSS and JavaScript</p>
+                <ul class="categories">
+                    <li>
+                        <button class="category category--selected">All <span class="category__count">8</span></button>
+                    </li>
+                    <li>
+                        <button class="category">Front End <span class="category__count">3</span></button>
+                    </li>
+                    <li>
+                        <button class="category">Mobile <span class="category__count">3</span></button>
+                    </li>
+                    <li>
+                        <button class="category">Animation <span class="category__count">2</span></button>
+                    </li>
+                </ul>
+                <ul>
+                    <li><a href="#" target="_blank">
+                        <img src="images/projects/project1.webp" alt="project1">
+                        <div>
+                            <h3>project1</h3>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </a></li>
+                    <li><a href="#" target="_blank">
+                        <img src="images/projects/project2.webp" alt="project2">
+                        <div>
+                            <h3>project2</h3>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </a></li>
+                    <li><a href="#" target="_blank">
+                        <img src="images/projects/project3.webp" alt="project3">
+                        <div>
+                            <h3>project3</h3>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </a></li>
+                    <li><a href="#" target="_blank">
+                        <img src="images/projects/project4.webp" alt="project4">
+                        <div>
+                            <h3>project4</h3>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </a></li>
+                    <li><a href="#" target="_blank">
+                        <img src="images/projects/project5.webp" alt="project5">
+                        <div>
+                            <h3>project5</h3>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </a></li>
+                    <li><a href="#" target="_blank">
+                        <img src="images/projects/project6.webp" alt="project6">
+                        <div>
+                            <h3>project6</h3>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </a></li>
+                    <li><a href="#" target="_blank">
+                        <img src="images/projects/project7.webp" alt="project7">
+                        <div>
+                            <h3>project7</h3>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </a></li>
+                    <li><a href="#" target="_blank"></a>
+                        <img src="images/projects/project8.webp" alt="project8">
+                        <div>
+                            <h3>project8</h3>
+                            <p>Lorem ipsum dolor sit amet.</p>
+                        </div></li>
+                </ul>
+            </div>
         </section>
         <!-- Testimonials --> 
         <section id="testimonials" class="section">
