--- a/index.html
+++ b/index.html
@@ -205,62 +205,79 @@
                         <button class="category">Animation <span class="category__count">2</span></button>
                     </li>
                 </ul>
-                <ul>
-                    <li><a href="#" target="_blank">
-                        <img src="images/projects/project1.webp" alt="project1">
-                        <div>
-                            <h3>project1</h3>
-                            <p>Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </a></li>
-                    <li><a href="#" target="_blank">
-                        <img src="images/projects/project2.webp" alt="project2">
-                        <div>
-                            <h3>project2</h3>
-                            <p>Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </a></li>
-                    <li><a href="#" target="_blank">
-                        <img src="images/projects/project3.webp" alt="project3">
-                        <div>
-                            <h3>project3</h3>
-                            <p>Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </a></li>
-                    <li><a href="#" target="_blank">
-                        <img src="images/projects/project4.webp" alt="project4">
-                        <div>
-                            <h3>project4</h3>
-                            <p>Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </a></li>
-                    <li><a href="#" target="_blank">
-                        <img src="images/projects/project5.webp" alt="project5">
-                        <div>
-                            <h3>project5</h3>
-                            <p>Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </a></li>
-                    <li><a href="#" target="_blank">
-                        <img src="images/projects/project6.webp" alt="project6">
-                        <div>
-                            <h3>project6</h3>
-                            <p>Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </a></li>
-                    <li><a href="#" target="_blank">
-                        <img src="images/projects/project7.webp" alt="project7">
-                        <div>
-                            <h3>project7</h3>
-                            <p>Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </a></li>
-                    <li><a href="#" target="_blank"></a>
-                        <img src="images/projects/project8.webp" alt="project8">
-                        <div>
-                            <h3>project8</h3>
-                            <p>Lorem ipsum dolor sit amet.</p>
-                        </div></li>
+                <ul class="projects">
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project1.webp" alt="project1" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">project1</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project2.webp" alt="project2" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">project2</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project3.webp" alt="project3" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">project3</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project4.webp" alt="project4" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">project4</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project5.webp" alt="project5" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">project5</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project6.webp" alt="project6" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">project6</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project7.webp" alt="project7" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">project7</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project8.webp" alt="project8" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">project8</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
