--- a/index.html
+++ b/index.html
@@ -285,26 +285,26 @@
         <section id="testimonials" class="section">
             <h2 class="title">Testmonoials</h2>
             <p class="description">See what they say about me</p>
-            <ul>
-                <li>
-                    <img src="images/testimonials/people1.webp" alt="people1">
-                    <div>
+            <ul class="testimonials">
+                <li class="testimonial">
+                    <img src="images/testimonials/people1.webp" alt="people1" class="testimonial__img">
+                    <div class="tesimonial__bubble">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam nisi accusantium ipsum facere vero nulla vitae facilis, dicta eligendi dolorem commodi veniam ab reiciendis nostrum modi animi autem ipsa?</p>
-                        <p><a href="#">Hana Jo</a> /Project partner</p>
+                        <p><a href="#" class="testimonial__bubble__name">Hana Jo</a> /Project partner</p>
                     </div>
                 </li>
-                <li>
-                    <img src="images/testimonials/people2.webp" alt="people2">
-                    <div>
+                <li class="testimonial">
+                    <img src="images/testimonials/people2.webp" alt="people2" class="testimonial__img">
+                    <div class="tesimonial__bubble">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam nisi accusantium ipsum facere vero nulla vitae facilis, dicta eligendi dolorem commodi veniam ab reiciendis nostrum modi animi autem ipsa?</p>
-                        <p><a href="#">Hana Jo</a> /Project partner</p>
+                        <p><a href="#" class="testimonial__bubble__name">Hana Jo</a> /Project partner</p>
                     </div>
                 </li>
-                <li>
-                    <img src="images/testimonials/people3.webp" alt="people3">
-                    <div>
+                <li class="testimonial">
+                    <img src="images/testimonials/people3.webp" alt="people3" class="testimonial__img">
+                    <div class="tesimonial__bubble">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam nisi accusantium ipsum facere vero nulla vitae facilis, dicta eligendi dolorem commodi veniam ab reiciendis nostrum modi animi autem ipsa?</p>
-                        <p><a href="#">Hana Jo</a> /Project partner</p>
+                        <p><a href="#" class="testimonial__bubble__name">Hana Jo</a> /Project partner</p>
                     </div>
                 </li>
             </ul>
