--- a/index.html
+++ b/index.html
@@ -311,28 +311,30 @@
         </section>
         <!-- Arrow Up -->
         <aside>
-            <a href="#home" title="back to top">
+            <a class="arrow-up" href="#home" title="back to top">
                 <i class="fa-solid fa-arrow-up"></i>
             </a>
         </aside>
     </main>
     <!-- Footer -->
     <footer id="contact" class="section">
-        <h2 class="title">Let&#39;s talk!</h2>
-        <p class="description">Jiwon.Ha@student.uts.edu.au</p>
-        <ul>
-            <li>
-                <a href="#" title="my gitub link">
-                    <i class="fa-brands fa-github"></i>
-                </a>
-            </li>
-            <li>
-                <a href="#" title="my linkdin link">
-                    <i class="fa-brands fa-linkedin"></i>
-                </a>
-            </li>
-        </ul>
-        <p>©️GiGi(Jiwon Ha) - All rights reserved</p>
+        <div class="max-container">
+            <h2 class="title">Let&#39;s talk!</h2>
+            <p class="description">Jiwon.Ha@student.uts.edu.au</p>
+            <ul class="contact__links">
+                <li>
+                    <a  class="contact__link" href="#" title="my gitub link">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a  class="contact__link" href="#" title="my linkdin link">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                </li>
+            </ul>
+            <p>©️GiGi(Jiwon Ha) - All rights reserved</p>
+        </div>
     </footer>
 </body>
 </html>
