--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=햐, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO -->
     <title>GiGi&#39;s portfolio</title>
     <meta 
@@ -38,7 +38,7 @@
             <img class="header__logo__img" src="images/faviconcircle.ico" alt="logo">
             <h1><a class="header__logo__title" href="#">GiGi</a></h1>
         </div>
-        <nav>
+        <nav class="header__nav">
             <ul class="header__menu">
                 <li><a class="header__menu__item active" href="#home">Home</a></li>
                 <li><a class="header__menu__item" href="#about">About</a></li>
@@ -70,7 +70,7 @@
                 <li class="major">
                     <i class="fa-solid fa-wand-magic-sparkles major__icon" ></i>
                     <p class="major__title">Design Bachelor' degree</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur.</p>
                 </li>
                 <li class="major">
                     <i class="fa-solid fa-people-arrows major__icon" ></i>
