--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
     <main>
         <!-- Home -->
         <section id="home">
-            <img class="home__profile" src="images/faviconnobackground.ico" alt="Gigi's profile">
-            <h2 class="home__title">Hello! <br> I&#39;m a <strong class="home__title--strong">Design Enthusiast and Technology Lover</strong>&#44; GiGi</h2>
-            <p class="home__description"> I&#39;m a recent graduate skilled in design&#44; interaction design&#44; and programming&#46;<br>
-                I&#39;m passionate about combining creativity with technical know&#45;how&#44; <br>
-                and I&#39;m excited to start my journey as a Front&#45;End Developer or Web Developer&#46;<br>
-                Let&#39;s create something amazing together&#33; 🚀
-            </p>
-            <a class="home__contact" href="#contact">Contact me</a>
+            <div  class="home__container">
+                <img class="home__profile" src="images/faviconnobackground.ico" alt="Gigi's profile">
+                <h2 class="home__title">Hello! <br> I&#39;m a <strong class="home__title--strong">Design Enthusiast and Technology Lover</strong>&#44; GiGi</h2>
+                <p class="home__description"> I&#39;m a recent graduate skilled in design&#44; interaction design&#44; and programming&#46;<br>
+                    I&#39;m passionate about combining creativity with technical know&#45;how&#44; <br>
+                    and I&#39;m excited to start my journey as a Front&#45;End Developer or Web Developer&#46;<br>
+                    Let&#39;s create something amazing together&#33; 🚀
+                </p>
+                <a class="home__contact" href="#contact">Contact me</a>
+            </div>
         </section>
         <!-- About -->
         <section id="about" class="section max-container">
