--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
                 <li><a class="header__menu__item" href="#about">About</a></li>
                 <li><a class="header__menu__item" href="#skills">Skills</a></li>
                 <li><a class="header__menu__item" href="#work">Work</a></li>
-                <li><a class="header__menu__item" href="#testmonials">Tesmimonials</a></li>
+                <li><a class="header__menu__item" href="#testimonials">Tesmimonials</a></li>
                 <li><a class="header__menu__item" href="#contact">Contact</a></li>
             </ul>
         </nav>
+        <button class="header__toggle" aria-label="navigation menu toggle">
+            <i class="fa-solid fa-bars"></i>
+        </button>
     </header>
     <!-- Main -->
     <main>
