JS - Projects Filtering

--- a/index.html
+++ b/index.html
@@ -199,20 +199,28 @@
                 <p class="description">Coding works with HTML, CSS and JavaScript</p>
                 <ul class="categories">
                     <li>
-                        <button class="category category--selected">All <span class="category__count">8</span></button>
+                        <button class="category category--selected" data-filter="all">
+                            All <span class="category__count">8</span>
+                        </button>
                     </li>
                     <li>
-                        <button class="category">Front End <span class="category__count">3</span></button>
+                        <button class="category" data-filter="front-end">
+                            Front End <span class="category__count">3</span>
+                        </button>
                     </li>
                     <li>
-                        <button class="category">Mobile <span class="category__count">3</span></button>
+                        <button class="category" data-filter="mobile">
+                            Mobile <span class="category__count">3</span>
+                        </button>
                     </li>
                     <li>
-                        <button class="category">Animation <span class="category__count">2</span></button>
+                        <button class="category" data-filter="animation">
+                            Animation <span class="category__count">2</span>
+                        </button>
                     </li>
                 </ul>
                 <ul class="projects">
-                    <li class="project">
+                    <li class="project" data-type="front-end">
                         <a href="#" target="_blank">
                             <img src="images/projects/project1.webp" alt="project1" class="project__img">
                             <div class="project__metadata">
@@ -221,7 +229,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="project">
+                    <li class="project" data-type="front-end">
                         <a href="#" target="_blank">
                             <img src="images/projects/project2.webp" alt="project2" class="project__img">
                             <div class="project__metadata">
@@ -230,7 +238,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="project">
+                    <li class="project" data-type="mobile">
                         <a href="#" target="_blank">
                             <img src="images/projects/project3.webp" alt="project3" class="project__img">
                             <div class="project__metadata">
@@ -239,7 +247,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="project">
+                    <li class="project" data-type="front-end">
                         <a href="#" target="_blank">
                             <img src="images/projects/project4.webp" alt="project4" class="project__img">
                             <div class="project__metadata">
@@ -248,7 +256,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="project">
+                    <li class="project" data-type="animation">
                         <a href="#" target="_blank">
                             <img src="images/projects/project5.webp" alt="project5" class="project__img">
                             <div class="project__metadata">
@@ -257,7 +265,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="project">
+                    <li class="project" data-type="mobile">
                         <a href="#" target="_blank">
                             <img src="images/projects/project6.webp" alt="project6" class="project__img">
                             <div class="project__metadata">
@@ -266,7 +274,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="project">
+                    <li class="project" data-type="animation">
                         <a href="#" target="_blank">
                             <img src="images/projects/project7.webp" alt="project7" class="project__img">
                             <div class="project__metadata">
@@ -275,7 +283,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="project">
+                    <li class="project" data-type="mobile">
                         <a href="#" target="_blank">
                             <img src="images/projects/project8.webp" alt="project8" class="project__img">
                             <div class="project__metadata">
