--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="https://kit.fontawesome.com/93c4d8dcc3.js" crossorigin="anonymous"
     ></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Java Script -->
     <script type="module" src="src/main.js" defer></script>
     <script type="module" src="src/projects.js" defer></script>
