--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="https://kit.fontawesome.com/93c4d8dcc3.js" crossorigin="anonymous"
     ></script>
     <!-- TypeIt -->
-    <script src="https://unpkg.com/typeit@@{TYPEIT_VERSION}/dist/index.umd.js"></script>
+    <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/style.css">
     <!-- Java Script -->
@@ -63,7 +63,7 @@
         <section id="home">
             <div  class="home__container">
                 <img class="home__profile" src="Images/faviconnobackground.ico" alt="Gigi's profile">
-                <h2 class="home__title">Hello! <br> I&#39;m a <strong class="home__title--strong">Design Enthusiast and Technology Lover</strong>&#44; GiGi</h2>
+                <h2 class="home__title">Hello! <br> I&#39;m a <strong class="home__title--strong">Design Enthusiast</strong> &#44; GiGi</h2>
                 <p class="home__description"> I&#39;m a recent graduate skilled in design&#44; interaction design&#44; and programming&#46;<br>
                     I&#39;m passionate about combining creativity with technical know&#45;how&#44; <br>
                     and I&#39;m excited to start my journey as a Front&#45;End Developer or Web Developer&#46;<br>
