og image update

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!-- OG (Open Graph Date) -->
     <meta property="og:tilte" content="GiGi&#39;s portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="배포후 생성된 URL" />
-    <meta property="og:image" content="배포후 생성된 이미지 URL" />
+    <meta property="og:url" content=" https://gigijiwonha.github.io/gigiportfolio/" />
+    <meta property="og:image" content=" https://gigijiwonha.github.io/gigiportfolio/Images/og.webp" />
     <!-- Googl Fonts - Open Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
